win the game by reaching the objective

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,9 @@
 ---------------------------------------------------------------------------------------------------
-Version: 0.1.1
-Date: ????
-  Changes:
+Version: 0.2.0
+Date: 2022-04-27
+  Features:
+    - Added a new setting allowing to win the game by reaching the objective
+
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.0
 Date: 2022-04-26
